[gd_scene load_steps=2 format=3 uid="uid://cg3hylang5fxn"]

[ext_resource type="Script" uid="uid://c8kiocescb5je" path="res://main.gd" id="1_j0gfq"]

[node name="Main" type="Node2D"]
script = ExtResource("1_j0gfq")

[node name="Button" type="Button" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 40.0
offset_top = 250.0
offset_right = 320.0
offset_bottom = 312.0
text = "Hello World"

[node name="Button Import File" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 46.0
offset_top = 175.0
offset_right = 316.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Pick File"

[node name="Label" type="Label" parent="."]
offset_left = 64.0
offset_top = 354.0
offset_right = 766.0
offset_bottom = 478.0
theme_override_font_sizes/font_size = 26
text = "ádasd"

[node name="Label2" type="Label" parent="."]
offset_left = 67.0
offset_top = 472.0
offset_right = 769.0
offset_bottom = 596.0
theme_override_font_sizes/font_size = 26
text = "ádasd"

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 591.0
offset_top = 99.0
offset_right = 1026.0
offset_bottom = 461.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button Import File" to="." method="_on_pick_file_press"]
